# futbol_bot_db

./: .env  README.md  bot.py  pyproject.toml  render.yaml  requirements.txt  start.sh
