[tool.poetry]
name = "futbol-bot"
version = "0.1.0"
description = "Bot Telegram 1v1 avec PostgreSQL"
authors = ["Horeb"]
license = "MIT"
packages = [
  { include = "bot.py" }
]

[tool.poetry.dependencies]
python = ">=3.10, <3.14" # Compatible 3.10, 3.11, 3.12, 3.13
python-telegram-bot = "20.8"
psycopg2-binary = "^2.9"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
